Update success message with date request
Added a message to the success section prompting for a date.

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </div>
 
     <div id="success-message">
-      <h2 style="font-family: 'Pacifico', cursive; color: #ff4757; font-size: 1.8rem;">I knew you'd say yes! 😘💘</h2>
+      <h2 style="font-family: 'Pacifico', cursive; color: #ff4757; font-size: 1.8rem;">I knew you'd say yes! 😘💘<br> please tell me if you are available tomorrow after my duty, let's date.</h2>
       <div class="image-row">
         <img src="mot.jpg" alt="Moment 1">
         <img src="mot1.jpg" alt="Moment 2">
@@ -222,4 +222,5 @@
 </script>
 
 </body>
+
 </html>
